--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -18,7 +18,7 @@
                 <span class="fl" onclick="javascript:location.href='/index/user/index'">
                     <img src="{$user.avatar}"">
                 </span>
-                <a class="outBtn fl" href="javascript:void(0)" onclick="logout()">退出</a>
+                <a class="outBtn fl" href="/index/login/logout">退出</a>
             {else /}
                 <a href="/index/login/login">登录</a>
                 <a href="/index/login/register">注册</a>
