--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -202,13 +202,27 @@
 	<input id="logo-flag" type="hidden">
 	<input type="text" name="module" value="setting" >
 </form>
-<iframe name="ajaxR-form" style="display:none;"></iframe>
+<iframe name="ajaxR-form" style="display:none; width:1200px;height: 800px;"></iframe>
 <iframe name="ajaxR" style="display:none;"></iframe>
 <script type="text/javascript">
 	window.onload = function() { 
 		$('#hide-form-file').change(function(){
 			$('#hide-form').submit();
 		});
+	}
+
+	// 表单提交回调
+	function form_callback(status,msg=''){
+		if(status == 1){
+			msg = msg ? msg : '保存成功，正在刷新...';
+			layer.msg(msg,{icon:6});
+			setTimeout(function(){
+				window.location.replace(location.href);
+			},1500);
+		}else{
+			msg = msg ? msg : '设置保存失败，请重试！';
+			layer.msg(msg,{icon:5});
+		}
 	}
 
 	//删除图片
