--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -8,7 +8,7 @@
                 <li><a href="/index/gene/index">我的基因</a></li>
                 <li><a href="/index/buy/buy">购买</a></li>
                 <li><a href="/index/referral/referral">基因介绍</a></li>
-                <li><a href="/index/order/index">我的订单</a></li>
+                <li><a href="/index/buy/my_order">我的订单</a></li>
                 <li><a href="/index/about/index">关于我们</a></li>
         </ul>
     </div>
