修改前端样式

--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -22,7 +22,7 @@
 
 			<div class="aboutour_ear inner-wrap">
                  <div class="aboutour_center">
-                       <p class="aboutour_logo">LOGO</p>
+                       <p class="aboutour_logo"><img style="width:100px;height:auto; margin-top:25px; " src="{$web_setting.web_logo}"></p>
                  	   <p class="about_us">关于我们</p>
                  	   <p class="text1">致力于让中国人受益于指导和理解的自己的基因组数据，现在主要的服务内容包括基于基因组数据的组源分析，个性化的运动和减肥建议，营养基因组学，基因组医学等方面的内容，未来，我们会跟合作伙伴一起把基因组数据推向每一个被基因所影响的角落。</p>
                  	   <p class="text2">这是我们的初衷，也是我们的未来，让自己更加了解自己，并联合大家一起不断的了解自己！解读基因的秘密，遇见未来的自己。</p>
