--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -25,7 +25,7 @@
 			
 			<div class="login_title">
 			
-			      <span>LOGO</span><span>登录</span>
+			      <span>登录</span>
 			   
 			</div>
 			
@@ -54,22 +54,13 @@
 			            	
 			            	<!--二维码图片-->
 			            	<div >
-			            		
-			            		
-			            		
+
 			            	</div>
 			            	<p style="text-align: center;padding-top: 10px;">请扫码登陆</p>
-			         	
-		      	
 			            </li>
 			       </ul>
           </div>
-			
-	
-			
 		</div>
-		
-		
 	</div>
 	<script src="__STATIC__/js/public/footer.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
