--- a/public/static/index/css/login/login.css
+++ b/public/static/index/css/login/login.css
@@ -41,7 +41,7 @@
 .login_title span{
 	
 	display: inline-block;
-	width: 50%;
+	width: 100%;
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
@@ -52,11 +52,11 @@
 	
 	
 }
-.login_title span:nth-child(1){
+/* .login_title span:nth-child(1){
 	
 	border-right: 2px solid rgb(55,175,230);
 	
-}
+} */
 #tit{
 	
 	margin-top: 25px;
